--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-source-filesystem": "^1.5.34",
     "gatsby-source-wordpress": "^2.0.82",
     "gatsby-transformer-json": "^1.0.17",
+    "mini.css": "^2.3.7",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
