--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
+    "gatsby": "^1.9.259",
+    "gatsby-image": "^1.0.46",
+    "gatsby-link": "^1.6.44",
     "gatsby-paginate": "^1.0.14",
     "gatsby-plugin-manifest": "^1.0.21",
-    "gatsby-plugin-offline": "^1.0.15",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-source-filesystem": "^1.5.34",
-    "gatsby-source-wordpress": "^2.0.82",
+    "gatsby-plugin-offline": "^1.0.16",
+    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-source-filesystem": "^1.5.35",
+    "gatsby-source-wordpress": "^2.0.84",
     "gatsby-transformer-json": "^1.0.17",
     "mini.css": "^2.3.7",
     "react-helmet": "^5.2.0"
@@ -22,11 +23,13 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "gh-pages": "^1.1.0",
+    "prettier": "^1.12.1"
   }
 }
