--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-manifest": "^1.0.21",
     "gatsby-plugin-offline": "^1.0.16",
     "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-remove-trailing-slashes": "^1.0.9",
     "gatsby-source-filesystem": "^1.5.35",
     "gatsby-source-wordpress": "^2.0.84",
     "gatsby-transformer-json": "^1.0.17",
