--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "version": "2.0.0",
   "author": "dberhane",
   "dependencies": {
-    "gatsby": "next",
-    "gatsby-image": "next",
-    "gatsby-link": "next",
+    "gatsby": "^2.0.0-rc.28",
+    "gatsby-image": "^2.0.0-rc.4",
+    "gatsby-link": "^2.0.0-rc.4",
     "gatsby-paginate": "latest",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-remove-trailing-slashes": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-source-wordpress": "next",
-    "gatsby-transformer-json": "next",
+    "gatsby-plugin-manifest": "^2.0.2-rc.1",
+    "gatsby-plugin-offline": "^2.0.0-rc.9",
+    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
+    "gatsby-plugin-remove-trailing-slashes": "^2.0.0-rc.1",
+    "gatsby-source-filesystem": "^2.0.1-rc.6",
+    "gatsby-source-wordpress": "^3.0.0-rc.9",
+    "gatsby-transformer-json": "^2.1.1-rc.6",
     "mini.css": "^2.3.7",
     "postcss-flexbugs-fixes": "^3.3.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
@@ -34,6 +34,6 @@
   },
   "devDependencies": {
     "gh-pages": "^1.2.0",
-    "prettier": "^1.13.6"
+    "prettier": "^1.14.2"
   }
 }
