--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "version": "2.0.0",
   "author": "dberhane",
   "dependencies": {
-    "gatsby": "^2.0.0-rc.28",
-    "gatsby-image": "^2.0.0-rc.4",
-    "gatsby-link": "^2.0.0-rc.4",
+    "gatsby": "^2.0.40",
+    "gatsby-image": "^2.0.19",
+    "gatsby-link": "^2.0.6",
     "gatsby-paginate": "latest",
-    "gatsby-plugin-manifest": "^2.0.2-rc.1",
-    "gatsby-plugin-offline": "^2.0.0-rc.9",
-    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
-    "gatsby-plugin-remove-trailing-slashes": "^2.0.0-rc.1",
-    "gatsby-source-filesystem": "^2.0.1-rc.6",
-    "gatsby-source-wordpress": "^3.0.0-rc.9",
-    "gatsby-transformer-json": "^2.1.1-rc.6",
+    "gatsby-plugin-manifest": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.12",
+    "gatsby-plugin-react-helmet": "^3.0.1",
+    "gatsby-plugin-remove-trailing-slashes": "^2.0.4",
+    "gatsby-source-filesystem": "^2.0.7",
+    "gatsby-source-wordpress": "^3.0.12",
+    "gatsby-transformer-json": "^2.1.5",
     "mini.css": "^2.3.7",
     "postcss-flexbugs-fixes": "^3.3.1",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
@@ -34,6 +34,6 @@
   },
   "devDependencies": {
     "gh-pages": "^1.2.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.3"
   }
 }
